--- a/hw1/pom.xml
+++ b/hw1/pom.xml
@@ -52,6 +52,11 @@
 	    <version>3.11.1</version>
 	    <scope>test</scope>
 	</dependency>
+	<dependency>
+       <groupId>org.xerial</groupId>
+       <artifactId>sqlite-jdbc</artifactId>
+       <version>3.32.3.2</version>
+    </dependency>
   </dependencies>
   
   <build>
